--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 		<meta name=viewport content="width=device-width,initial-scale=1">
 		<link rel=icon href=/favicon.ico>
 		<title>chart</title>
-		<link href=./css/app.53ca21c2.css rel=preload as=style>
-		<link href=./js/app.6ea1fb84.js rel=preload as=script>
-		<link href=./js/chunk-vendors.99ffb1f8.js rel=preload as=script>
-		<link href=./css/app.53ca21c2.css rel=stylesheet>
+		<link href="/css/app.53ca21c2.css" rel=preload as=style>
+		<link href="/js/app.6ea1fb84.js" rel=preload as=script>
+		<link href="/js/chunk-vendors.99ffb1f8.js" rel=preload as=script>
+		<link href="/css/app.53ca21c2.css" rel=stylesheet>
 	</head>
 
 	<body><noscript><strong>We're sorry but chart doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript>
 		<div id=app></div>
-		<script src=./js/chunk-vendors.99ffb1f8.js></script>
-		<script src=./js/app.6ea1fb84.js></script>
+		<script src="/js/chunk-vendors.99ffb1f8.js"></script>
+		<script src="/js/app.6ea1fb84.js"></script>
 	</body>
 
 </html>
